# basket-project

./: .gitignore  .pre-commit-config.yaml  README.md  first_deparment_probability.csv  generate_dataset.py  helper.py  items.csv  items_prices_range.csv  markov_chain.csv  notebook.ipynb  pyproject.toml
